--- a/add/index.html
+++ b/add/index.html
@@ -30,6 +30,7 @@
       </nav>
       <section>
         <form class='addForm'>
+          <input id='#addTextBox' type='text' value=''>
           <input id='addButton' type='button' value='Add Contact'>
         </form>
       </section>
