added newName and newNumber append on output. still no enter functionality

--- a/add/index.html
+++ b/add/index.html
@@ -30,7 +30,8 @@
       </nav>
       <section>
         <form class='addForm'>
-          <input id='#addTextBox' type='text' value=''>
+          <input id='addName' type='text'>
+          <input id='addNumber' type='text'>
           <input id='addButton' type='button' value='Add Contact'>
         </form>
       </section>
