--- a/add/index.html
+++ b/add/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>Add Contacts</title>
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css' rel='stylesheet'>
     <link href='../css/main.css' rel='stylesheet' type='text/css'>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
   </head>
   <body>
     <div class='container'>
@@ -29,11 +31,25 @@
         </ul>
       </nav>
       <section>
-        <form class='addForm'>
-          <input id='addName' type='text'>
-          <input id='addNumber' type='text'>
-          <input id='addButton' type='button' value='Add Contact'>
-        </form>
+        <input data-target='#myModal' data-toggle='modal' id='addSign' type='button' value='+'>
+        <div class='modal fade' id='myModal' role='dialog'>
+          <div class='modal-dialog'>
+            <div class='modal-content'>
+              <div class='modal-header'>
+                <input class='close' data-dismiss='modal' type='button' value='&amp;times'>
+                <h4 class='modal-title'>Add Contact</h4>
+              </div>
+              <div class='modal-body'>
+                <input id='addName' type='text'>
+                <input id='addNumber' type='text'>
+                <input data-dismiss='modal' id='clickToAdd' type='button' value='Submit'>
+              </div>
+              <div class='modal-footer'>
+                <input class='btn btn-default' data-dismiss='modal' type='button' value='close'>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id='showContacts'>
         <div id='output'></div>
