--- a/add/index.html
+++ b/add/index.html
@@ -31,28 +31,30 @@
         </ul>
       </nav>
       <section>
-        <input data-target='#myModal' data-toggle='modal' id='addSign' type='button' value='+'>
-        <div class='modal fade' id='myModal' role='dialog'>
-          <div class='modal-dialog'>
-            <div class='modal-content'>
-              <div class='modal-header'>
-                <input class='close' data-dismiss='modal' type='button' value='&amp;times'>
-                <h4 class='modal-title'>Add Contact</h4>
-              </div>
-              <div class='modal-body'>
-                <input id='addName' type='text'>
-                <input id='addNumber' type='text'>
-                <input data-dismiss='modal' id='clickToAdd' type='button' value='Submit'>
-              </div>
-              <div class='modal-footer'>
-                <input class='btn btn-default' data-dismiss='modal' type='button' value='close'>
+        <div id='addDiv'>
+          <input data-target='#myModal' data-toggle='modal' id='addSign' type='button' value='+'>
+          <div class='modal fade' id='myModal' role='dialog'>
+            <div class='modal-dialog'>
+              <div class='modal-content'>
+                <div class='modal-header'>
+                  <!-- %input(type="button" class="close" data-dismiss="modal" value="&times") -->
+                  <h4 class='modal-title'>Add Contact</h4>
+                </div>
+                <div class='modal-body'>
+                  <input id='addName' placeholder='Enter Name' type='text'>
+                  <input id='addNumber' placeholder='Enter Number' type='text'>
+                </div>
+                <div class='modal-footer'>
+                  <input class='btn btn-default' data-dismiss='modal' id='clickToAdd' type='button' value='Create Contact'>
+                  <input class='btn btn-default' data-dismiss='modal' type='button' value='close'>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <section id='showContacts'>
-        <div id='output'></div>
+        <div id='showContacts'>
+          <div id='output'></div>
+        </div>
       </section>
     </div>
   </body>
