--- a/add/index.html
+++ b/add/index.html
@@ -45,7 +45,7 @@
                   <input id='addNumber' placeholder='Enter Number' type='text'>
                 </div>
                 <div class='modal-footer'>
-                  <input class='btn btn-default' data-dismiss='modal' id='clickToAdd' type='button' value='Create Contact'>
+                  <input class='btn btn-default' id='clickToAdd' type='button' value='Create Contact'>
                   <input class='btn btn-default' data-dismiss='modal' type='button' value='close'>
                 </div>
               </div>
