auto tab on number input

--- a/add/index.html
+++ b/add/index.html
@@ -42,7 +42,11 @@
                 </div>
                 <div class='modal-body'>
                   <input id='addName' placeholder='Enter Name' type='text'>
-                  <input id='addNumber' placeholder='Enter Number' type='text'>
+                  <div class='numberInputs'>
+                    <input id='addNumber1' maxlength='3' placeholder='XXX' size='3' type='text'>
+                    <input id='addNumber2' maxlength='3' placeholder='XXX' size='3' type='text'>
+                    <input id='addNumber3' maxlength='4' placeholder='XXXX' size='4' type='text'>
+                  </div>
                 </div>
                 <div class='modal-footer'>
                   <input class='btn btn-default' id='clickToAdd' type='button' value='Create Contact'>
