added focus on addName

--- a/add/index.html
+++ b/add/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class='modal-footer'>
                   <input class='btn btn-default' id='clickToAdd' type='button' value='Create Contact'>
-                  <input class='btn btn-default' data-dismiss='modal' type='button' value='close'>
+                  <input class='btn btn-default' data-dismiss='modal' type='button' value='Close'>
                 </div>
               </div>
             </div>
