added href to home and contacts

--- a/add/index.html
+++ b/add/index.html
@@ -11,10 +11,10 @@
     <div class='container'>
       <nav>
         <ul>
-          <a href='#'>
+          <a href='../index.html'>
             <li>Home</li>
           </a>
-          <a href='#'>
+          <a href='index.html'>
             <li>Add Contacts</li>
           </a>
         </ul>
