--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <title>Address Book</title>
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet' type='text/css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
   </head>
   <body>
     <div class='container'>
       <nav>
         <ul class='navLeft'>
           <li>Home</li>
-          <li>Add Contacts</li>
+          <a href='add/index.html'>
+            <li>Add Contacts</li>
+          </a>
         </ul>
         <ul class='navRight'>
           <li>Log In</li>
@@ -22,11 +27,11 @@
         <p class='mainDesc'>The place for people</p>
       </header>
       <section>
-        <a href='#'>
+        <a href='add/index.html'>
           <p>Go Now</p>
         </a>
       </section>
     </div>
   </body>
-  <script></script>
+  <script src='js/js.js'></script>
 </html>
