clears number inputs after submit

--- a/add/index.html
+++ b/add/index.html
@@ -57,7 +57,9 @@
           </div>
         </div>
         <div id='showContacts'>
-          <div id='output'></div>
+          <div id='output'>
+            <p>Test</p>
+          </div>
         </div>
       </section>
     </div>
