--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
     <div class='container'>
       <nav>
         <ul class='navLeft'>
-          <li>Home</li>
+          <a href='index.html'>
+            <li>Home</li>
+          </a>
           <a href='add/index.html'>
             <li>Add Contacts</li>
           </a>
         </ul>
         <ul class='navRight'>
-          <li>Log In</li>
-          <li>Sign Up</li>
-          <li>Settings</li>
+          <a href='#'>
+            <li>Log In</li>
+          </a>
+          <a href='#'>
+            <li>Sign Up</li>
+          </a>
+          <a href='#'>
+            <li>Settings</li>
+          </a>
         </ul>
       </nav>
       <header>
@@ -28,7 +36,7 @@
       </header>
       <section>
         <a href='add/index.html'>
-          <p>Go Now</p>
+          <p class='go'>Go To Address Book</p>
         </a>
       </section>
     </div>
